--- a/index.html
+++ b/index.html
@@ -150,19 +150,119 @@
                 <form class="calculator__form" action="">
                     <input type="text" placeholder="Ваше имя">
                     <input type="text" required placeholder="Номер телефона">
-                    <span>Нажимая кнопку "ОТПРАВИТЬ", я даю согласие на обработку своих персональных данных и принимаю условия
+                    <span>Нажимая кнопку "ОТПРАВИТЬ", я даю согласие на обработку своих персональных данных и принимаю условия <br>
                         <a href="">Пользовательского соглашения</a></span>
                     <button type="submit"> Отправить </button>
                 </form>
             </div>
         </div>
     </section>
-    <section>
-
+    <section class="main__we_work">
+        <h2 class="we_work__title">Как Мы Работаем</h2>
+        <div class="we_work__wrap">
+            <div class="we_work__box">
+                <div class="we_work__point">
+                    <span class="we_work__number">1</span>
+                    <span>ВЫ ЗВОНИТЕ НАМ</span>
+                </div>
+                <div class="we_work__img">
+                    <img src="src/img/small_item_162.jpg" alt="">
+                </div>
+            </div>
+            <div class="we_work__box">
+                <div class="we_work__point">
+                    <span class="we_work__number">2</span>
+                    <span>ВЫБИРАЕТЕ УСЛУГУ</span>
+                </div>
+                <div class="we_work__img">
+                    <img src="src/img/small_item_163.jpg" alt="">
+                </div>
+            </div>
+            <div class="we_work__box">
+                <div class="we_work__point">
+                    <span class="we_work__number">3</span>
+                    <span>ОСТАВЛЯЕТЕ ДЕТАЛЬ ДВИГАТЕЛЯ</span>
+                </div>
+                <div class="we_work__img">
+                    <img src="src/img/small_item_164.jpg" alt="">
+                </div>
+            </div>
+            <div class="we_work__box">
+                <div class="we_work__point">
+                    <span class="we_work__number">4</span>
+                    <span>ЗАБИРАЕТЕ ЗАКАЗ</span>
+                </div>
+                <div class="we_work__img">
+                    <img src="src/img/small_item_165.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="main__equipment">
+        <h2 class="equipment__title">Наше Оборудование</h2>
+        <div class="equipment__wrap">
+            <div class="equipment__box">
+                <img src="src/img/informationsystem_property_file_194_39.png" alt="" class="equipment__icon">
+                <span class="equipment__desc">Шлифовальный станок Berco</span>
+                <img src="src/img/small_item_194.png" alt="" class="equipment__img">
+            </div>
+            <div class="equipment__box">
+                <img src="src/img/informationsystem_property_file_195_40.png" alt="" class="equipment__icon">
+                <span class="equipment__desc">Мойка механика КМ-11</span>
+                <img src="src/img/small_item_193.png" alt="" class="equipment__img">
+            </div>
+            <div class="equipment__box">
+                <img src="src/img/informationsystem_property_file_193_38.png" alt="" class="equipment__icon">
+                <span class="equipment__desc">Опрессовочный станок</span>
+                <img src="src/img/small_item_195.png" alt="" class="equipment__img">
+            </div>
+        </div>
+    </section>
+    <section class="main__news">
+        <h2 class="news__title">Наши новости</h2>
+        <div class="news__wrap">
+            <div class="news__box">
+                <h3 class="news__subtitle">ГИЛЬЗОВКА РЯДНЫХ И V-ОБРАЗНЫХ ЛЕГКОВЫХ БЛОКОВ ЦИЛИНДРА.</h3>
+                <div class="news__desc">
+                    <img src="src/img/small_item_219.jpg" alt="" class="news__img">
+                    <p>Компания "Алтушка" осуществляет качественную гильзовку блока цилиндров, на современном оборудовании, гильзами проверенных производителей в кратчайшие сроки и по приемлемой цене.
+                    </p>
+                    <p> Рядные блоки (чугун/алюминий) : 5000 руб.  за цилиндр.
+                    </p>
+                    <p>V-образные блоки (чугун/алюминий) : 6000 руб. за цилиндр.
+                    </p>
+                    <p>Работы производятся в течении одного рабочего дня.
+                    </p>
+                    <p> В цену входит : мойка блока, расточка под гильзу, установка гильзы, расточка самой гильзы, хонингование, шлифовка плоскости и, что не мало важно, сама гильза.
+                    </p>
+                </div>
+            </div>
+            <div class="news__box">
+                <h3 class="news__subtitle">ГИЛЬЗОВКА РЯДНЫХ И V-ОБРАЗНЫХ ЛЕГКОВЫХ БЛОКОВ ЦИЛИНДРА.</h3>
+                <div class="news__desc">
+                    <img src="src/img/small_item_219.jpg" alt="" class="news__img">
+                    <p>Компания "Алтушка" осуществляет качественную гильзовку блока цилиндров, на современном оборудовании, гильзами проверенных производителей в кратчайшие сроки и по приемлемой цене.
+                    </p>
+                    <p> Рядные блоки (чугун/алюминий) : 5000 руб.  за цилиндр.
+                    </p>
+                    <p>V-образные блоки (чугун/алюминий) : 6000 руб. за цилиндр.
+                    </p>
+                    <p>Работы производятся в течении одного рабочего дня.
+                    </p>
+                    <p> В цену входит : мойка блока, расточка под гильзу, установка гильзы, расточка самой гильзы, хонингование, шлифовка плоскости и, что не мало важно, сама гильза.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 </main>
-<footer>
+<footer class="footer">
+    <div class="footer__contacts">
 
+    </div>
+    <div class="footer__map">
+
+    </div>
 </footer>
 <script src="src/js/jquery-3.4.1.min.js"></script>
 <script src="src/app/slick/slick.min.js"></script>
