--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="header__contacts">
                 <span class="header__time">Работаем ПН-ПТ с 9:00 до 20:00</span>
-                <a href="#" class="header__phone">+7 (495) 506-58-92</a>
+                <a href="#" class="header__phone">+7 (124) 235-35-23</a>
             </div>
         </div>
     </div>
@@ -258,10 +258,15 @@
 </main>
 <footer class="footer">
     <div class="footer__contacts">
-
+        <div class="footer__contacts--wrap">
+            <h2 class="footer__title">Контактная Информация</h2>
+            <a class="footer__phone">+7 (235) 532-32-23</a>
+            <a class="footer__mail">mail@yandex.ru</a>
+            <span class="footer__address">г. Москва, Алтуфьевское шоссе, д. 79 А</span>
+        </div>
     </div>
     <div class="footer__map">
-
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1f1b36485c2a0d60f6e568dbb88d6efbead9e1b6522c03b6758f8a332f047518&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
     </div>
 </footer>
 <script src="src/js/jquery-3.4.1.min.js"></script>
