--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
     <div class="footer__contacts">
         <div class="footer__contacts--wrap">
             <h2 class="footer__title">Контактная Информация</h2>
-            <a class="footer__phone">+7 (235) 532-32-23</a>
-            <a class="footer__mail">mail@yandex.ru</a>
-            <span class="footer__address">г. Москва, Алтуфьевское шоссе, д. 79 А</span>
+            <a href="tel:+72355323223" class="footer__phone"> Телефон: +7 (235) 532-32-23</a>
+            <a href="mailto:mail@yandex.ru" class="footer__mail">Почта: mail@yandex.ru</a>
+            <span class="footer__address">Адрес: г. Москва, Алтуфьевское шоссе, д. 79 А</span>
         </div>
     </div>
     <div class="footer__map">
